--- a/CoreDemo/Views/Login/Index.cshtml
+++ b/CoreDemo/Views/Login/Index.cshtml
@@ -11,11 +11,11 @@
                 <form action="#" method="post">
                     <div class="form-group">
                         <label for="exampleInputEmail1 mb-2">Kullanıcı Adı</label>
-                        <input type="text" class="form-control" asp-for="@Model.username" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="" required="">
+                        <input type="text" class="form-control" asp-for="@Model.Username" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="" required="">
                     </div>
                     <div class="form-group">
                         <label for="exampleInputPassword1 mb-2">Password</label>
-                        <input type="password" class="form-control" id="exampleInputPassword1" asp-for="@Model.password" placeholder="" required="">
+                        <input type="password" class="form-control" id="exampleInputPassword1" asp-for="@Model.Password" placeholder="" required="">
                     </div>
                     <div class="form-check mb-2">
                         <input type="checkbox" class="form-check-input" id="exampleCheck1">
