--- a/CoreDemo/Views/Writer/WriterEditProfile.cshtml
+++ b/CoreDemo/Views/Writer/WriterEditProfile.cshtml
@@ -14,32 +14,32 @@
             <form class="forms-sample" method="post">
                 <div class="form-group">
                     <label for="exampleInputName1">İsim</label>
-                    <input type="text" asp-for="@Model.namesurname" class="form-control" />
-                    @Html.ValidationMessageFor(x => x.namesurname, "", new { @class = "text-danger" })
+                    <input type="text" asp-for="@Model.NameSurname" class="form-control" />
+                    @Html.ValidationMessageFor(x => x.NameSurname, "", new { @class = "text-danger" })
                 </div>
 
                 <div class="form-group">
                     <label for="exampleInputEmail3">Kullanıcı Adı </label>
-                    <input type="text" asp-for="@Model.username" class="form-control" />
-                    @Html.ValidationMessageFor(x => x.username, "", new { @class = "text-danger" })
+                    <input type="text" asp-for="@Model.UserName" class="form-control" />
+                    @Html.ValidationMessageFor(x => x.UserName, "", new { @class = "text-danger" })
                 </div>
 
                 <div class="form-group">
                     <label for="exampleInputEmail3">Mail Adresi </label>
-                    <input type="text" asp-for="@Model.mail" class="form-control" />
-                    @Html.ValidationMessageFor(x => x.mail, "", new { @class = "text-danger" })
+                    <input type="text" asp-for="@Model.Mail" class="form-control" />
+                    @Html.ValidationMessageFor(x => x.Mail, "", new { @class = "text-danger" })
                 </div>
 
                 <div class="form-group">
                     <label for="exampleInputEmail3">Yeni Şifreniz </label>
-                    <input type="text" asp-for="@Model.password" class="form-control" />
-                    @Html.ValidationMessageFor(x => x.password, "", new { @class = "text-danger" })
+                    <input type="text" asp-for="@Model.Password" class="form-control" />
+                    @Html.ValidationMessageFor(x => x.Password, "", new { @class = "text-danger" })
                 </div>
 
                 <div class="form-group">
                     <label for="exampleInputEmail3">Resim Yolu </label>
-                    <input type="text" asp-for="@Model.imgageurl" class="form-control" />
-                    @Html.ValidationMessageFor(x => x.imgageurl, "", new { @class = "text-danger" })
+                    <input type="text" asp-for="@Model.ImageUrl" class="form-control" />
+                    @Html.ValidationMessageFor(x => x.ImageUrl, "", new { @class = "text-danger" })
                 </div>
 
 
